--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -6,10 +6,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  padding-left: 120px;
-  padding-right: 120px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
 
   .home-content {
     display: flex;
@@ -39,13 +36,12 @@
 
     .movie-cards-section {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 24px;
 
       .movie-card {
         width: 100%;
-        min-width: 300px;
-        align-self: stretch;
+        min-width: 250px;
         overflow: hidden;
       }
     }
